// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabGroup Tab integration has active class typography when active 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    isActive={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Typography
        block={true}
        className="no-margin"
        inline={false}
        style={null}
        variant="tab-active"
      />,
      "className": "underline tab-li pointer tab-padding",
      "data-qa-id": "",
      "onClick": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "block": true,
        "children": null,
        "className": "no-margin",
        "inline": false,
        "style": null,
        "variant": "tab-active",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Typography
          block={true}
          className="no-margin"
          inline={false}
          style={null}
          variant="tab-active"
        />,
        "className": "underline tab-li pointer tab-padding",
        "data-qa-id": "",
        "onClick": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": true,
          "children": null,
          "className": "no-margin",
          "inline": false,
          "style": null,
          "variant": "tab-active",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`TabGroup Tab integration is not active be default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Typography
        block={true}
        className="no-margin"
        inline={false}
        style={null}
        variant="tab"
      />,
      "className": "underline-hidden tab-li pointer tab-padding",
      "data-qa-id": "",
      "onClick": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "block": true,
        "children": null,
        "className": "no-margin",
        "inline": false,
        "style": null,
        "variant": "tab",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Typography
          block={true}
          className="no-margin"
          inline={false}
          style={null}
          variant="tab"
        />,
        "className": "underline-hidden tab-li pointer tab-padding",
        "data-qa-id": "",
        "onClick": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "block": true,
          "children": null,
          "className": "no-margin",
          "inline": false,
          "style": null,
          "variant": "tab",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`TabGroup integration makes clicked tab the active one 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): ShallowWrapper {
    Symbol(enzyme.__root__): [Circular],
    Symbol(enzyme.__unrendered__): <TabGroup
      activeIcon={null}
      className={null}
      defaultValue={null}
      flex={true}
      multiple={false}
      onChange={[MockFunction]}
      style={null}
    >
      <Unknown
        value={0}
      >
        Test
      </Unknown>
      <Unknown
        value={1}
      >
        Test2
      </Unknown>
      <span>
        This is not a tab
      </span>
    </TabGroup>,
    Symbol(enzyme.__renderer__): Object {
      "batchedUpdates": [Function],
      "checkPropTypes": [Function],
      "getNode": [Function],
      "render": [Function],
      "simulateError": [Function],
      "simulateEvent": [Function],
      "unmount": [Function],
    },
    Symbol(enzyme.__node__): Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <span>
            This is not a tab
          </span>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": false,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "isActive": false,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "host",
          "props": Object {
            "children": "This is not a tab",
          },
          "ref": null,
          "rendered": "This is not a tab",
          "type": "span",
        },
      ],
      "type": "ul",
    },
    Symbol(enzyme.__nodes__): Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Unknown
              activeIcon={null}
              isActive={false}
              selectTab={[Function]}
              value={0}
            >
              Test
            </Unknown>,
            <Unknown
              activeIcon={null}
              isActive={false}
              selectTab={[Function]}
              value={1}
            >
              Test2
            </Unknown>,
            <span>
              This is not a tab
            </span>,
          ],
          "className": "tab-group-ul flex",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "function",
            "props": Object {
              "activeIcon": null,
              "children": "Test",
              "isActive": false,
              "selectTab": [Function],
              "value": 0,
            },
            "ref": null,
            "rendered": "Test",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".1",
            "nodeType": "function",
            "props": Object {
              "activeIcon": null,
              "children": "Test2",
              "isActive": false,
              "selectTab": [Function],
              "value": 1,
            },
            "ref": null,
            "rendered": "Test2",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".2",
            "nodeType": "host",
            "props": Object {
              "children": "This is not a tab",
            },
            "ref": null,
            "rendered": "This is not a tab",
            "type": "span",
          },
        ],
        "type": "ul",
      },
    ],
    Symbol(enzyme.__options__): Object {
      "adapter": ReactSixteenAdapter {
        "options": Object {
          "enableComponentDidUpdateOnSetState": true,
          "legacyContextMode": "parent",
          "lifecycles": Object {
            "componentDidUpdate": Object {
              "onSetState": true,
            },
            "getChildContext": Object {
              "calledByRenderer": false,
            },
            "getDerivedStateFromError": true,
            "getDerivedStateFromProps": Object {
              "hasShouldComponentUpdateBug": true,
            },
            "getSnapshotBeforeUpdate": true,
            "setState": Object {
              "skipsComponentDidUpdateOnNullish": true,
            },
          },
        },
      },
    },
    Symbol(enzyme.__childContext__): null,
  },
  Symbol(enzyme.__unrendered__): null,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": ".0",
    "nodeType": "function",
    "props": Object {
      "activeIcon": null,
      "children": "Test",
      "isActive": false,
      "selectTab": [Function],
      "value": 0,
    },
    "ref": null,
    "rendered": "Test",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": ".0",
      "nodeType": "function",
      "props": Object {
        "activeIcon": null,
        "children": "Test",
        "isActive": false,
        "selectTab": [Function],
        "value": 0,
      },
      "ref": null,
      "rendered": "Test",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__rootNodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <span>
            This is not a tab
          </span>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": false,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "isActive": false,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "host",
          "props": Object {
            "children": "This is not a tab",
          },
          "ref": null,
          "rendered": "This is not a tab",
          "type": "span",
        },
      ],
      "type": "ul",
    },
  ],
}
`;

exports[`TabGroup integration makes clicked tab the active one 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): ShallowWrapper {
    Symbol(enzyme.__root__): [Circular],
    Symbol(enzyme.__unrendered__): <TabGroup
      activeIcon={null}
      className={null}
      defaultValue={null}
      flex={true}
      multiple={false}
      onChange={
        [MockFunction] {
          "calls": Array [
            Array [
              0,
              <Unknown
                value={0}
              >
                Test
              </Unknown>,
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        }
      }
      style={null}
    >
      <Unknown
        value={0}
      >
        Test
      </Unknown>
      <Unknown
        value={1}
      >
        Test2
      </Unknown>
      <span>
        This is not a tab
      </span>
    </TabGroup>,
    Symbol(enzyme.__renderer__): Object {
      "batchedUpdates": [Function],
      "checkPropTypes": [Function],
      "getNode": [Function],
      "render": [Function],
      "simulateError": [Function],
      "simulateEvent": [Function],
      "unmount": [Function],
    },
    Symbol(enzyme.__node__): Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={true}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <span>
            This is not a tab
          </span>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": true,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "isActive": false,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "host",
          "props": Object {
            "children": "This is not a tab",
          },
          "ref": null,
          "rendered": "This is not a tab",
          "type": "span",
        },
      ],
      "type": "ul",
    },
    Symbol(enzyme.__nodes__): Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Unknown
              activeIcon={null}
              isActive={true}
              selectTab={[Function]}
              value={0}
            >
              Test
            </Unknown>,
            <Unknown
              activeIcon={null}
              isActive={false}
              selectTab={[Function]}
              value={1}
            >
              Test2
            </Unknown>,
            <span>
              This is not a tab
            </span>,
          ],
          "className": "tab-group-ul flex",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": ".0",
            "nodeType": "function",
            "props": Object {
              "activeIcon": null,
              "children": "Test",
              "isActive": true,
              "selectTab": [Function],
              "value": 0,
            },
            "ref": null,
            "rendered": "Test",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".1",
            "nodeType": "function",
            "props": Object {
              "activeIcon": null,
              "children": "Test2",
              "isActive": false,
              "selectTab": [Function],
              "value": 1,
            },
            "ref": null,
            "rendered": "Test2",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": ".2",
            "nodeType": "host",
            "props": Object {
              "children": "This is not a tab",
            },
            "ref": null,
            "rendered": "This is not a tab",
            "type": "span",
          },
        ],
        "type": "ul",
      },
    ],
    Symbol(enzyme.__options__): Object {
      "adapter": ReactSixteenAdapter {
        "options": Object {
          "enableComponentDidUpdateOnSetState": true,
          "legacyContextMode": "parent",
          "lifecycles": Object {
            "componentDidUpdate": Object {
              "onSetState": true,
            },
            "getChildContext": Object {
              "calledByRenderer": false,
            },
            "getDerivedStateFromError": true,
            "getDerivedStateFromProps": Object {
              "hasShouldComponentUpdateBug": true,
            },
            "getSnapshotBeforeUpdate": true,
            "setState": Object {
              "skipsComponentDidUpdateOnNullish": true,
            },
          },
        },
      },
    },
    Symbol(enzyme.__childContext__): null,
  },
  Symbol(enzyme.__unrendered__): null,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": ".0",
    "nodeType": "function",
    "props": Object {
      "activeIcon": null,
      "children": "Test",
      "isActive": true,
      "selectTab": [Function],
      "value": 0,
    },
    "ref": null,
    "rendered": "Test",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": ".0",
      "nodeType": "function",
      "props": Object {
        "activeIcon": null,
        "children": "Test",
        "isActive": true,
        "selectTab": [Function],
        "value": 0,
      },
      "ref": null,
      "rendered": "Test",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__rootNodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={true}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <span>
            This is not a tab
          </span>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": true,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "isActive": false,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "host",
          "props": Object {
            "children": "This is not a tab",
          },
          "ref": null,
          "rendered": "This is not a tab",
          "type": "span",
        },
      ],
      "type": "ul",
    },
  ],
}
`;

exports[`TabGroup integration matches basic usage snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TabGroup
    activeIcon={null}
    className={null}
    defaultValue={null}
    flex={true}
    multiple={false}
    onChange={[Function]}
    style={null}
  >
    <Unknown
      value={0}
    >
      Test
    </Unknown>
    <Unknown
      defaultActive={true}
      value={1}
    >
      Test2
    </Unknown>
    <Unknown
      value={2}
    >
      Test3
    </Unknown>
  </TabGroup>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          activeIcon={null}
          isActive={false}
          selectTab={[Function]}
          value={0}
        >
          Test
        </Unknown>,
        <Unknown
          activeIcon={null}
          defaultActive={true}
          isActive={true}
          selectTab={[Function]}
          value={1}
        >
          Test2
        </Unknown>,
        <Unknown
          activeIcon={null}
          isActive={false}
          selectTab={[Function]}
          value={2}
        >
          Test3
        </Unknown>,
      ],
      "className": "tab-group-ul flex",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "activeIcon": null,
          "children": "Test",
          "isActive": false,
          "selectTab": [Function],
          "value": 0,
        },
        "ref": null,
        "rendered": "Test",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "activeIcon": null,
          "children": "Test2",
          "defaultActive": true,
          "isActive": true,
          "selectTab": [Function],
          "value": 1,
        },
        "ref": null,
        "rendered": "Test2",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".2",
        "nodeType": "function",
        "props": Object {
          "activeIcon": null,
          "children": "Test3",
          "isActive": false,
          "selectTab": [Function],
          "value": 2,
        },
        "ref": null,
        "rendered": "Test3",
        "type": [Function],
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            defaultActive={true}
            isActive={true}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={2}
          >
            Test3
          </Unknown>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": false,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "defaultActive": true,
            "isActive": true,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test3",
            "isActive": false,
            "selectTab": [Function],
            "value": 2,
          },
          "ref": null,
          "rendered": "Test3",
          "type": [Function],
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`TabGroup integration matchs base snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TabGroup
    activeIcon={null}
    className={null}
    defaultValue={null}
    flex={true}
    multiple={false}
    onChange={[Function]}
    style={null}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": null,
      "className": "tab-group-ul flex",
    },
    "ref": null,
    "rendered": null,
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": null,
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": null,
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`TabGroup integration renders basic element if not a tab 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TabGroup
    activeIcon={null}
    className={null}
    defaultValue={null}
    flex={true}
    multiple={false}
    onChange={[Function]}
    style={null}
  >
    <Unknown
      value={0}
    >
      Test
    </Unknown>
    <Unknown
      defaultActive={true}
      value={1}
    >
      Test2
    </Unknown>
    <span>
      This is not a tab
    </span>
  </TabGroup>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Unknown
          activeIcon={null}
          isActive={false}
          selectTab={[Function]}
          value={0}
        >
          Test
        </Unknown>,
        <Unknown
          activeIcon={null}
          defaultActive={true}
          isActive={true}
          selectTab={[Function]}
          value={1}
        >
          Test2
        </Unknown>,
        <span>
          This is not a tab
        </span>,
      ],
      "className": "tab-group-ul flex",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": ".0",
        "nodeType": "function",
        "props": Object {
          "activeIcon": null,
          "children": "Test",
          "isActive": false,
          "selectTab": [Function],
          "value": 0,
        },
        "ref": null,
        "rendered": "Test",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".1",
        "nodeType": "function",
        "props": Object {
          "activeIcon": null,
          "children": "Test2",
          "defaultActive": true,
          "isActive": true,
          "selectTab": [Function],
          "value": 1,
        },
        "ref": null,
        "rendered": "Test2",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": ".2",
        "nodeType": "host",
        "props": Object {
          "children": "This is not a tab",
        },
        "ref": null,
        "rendered": "This is not a tab",
        "type": "span",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Unknown
            activeIcon={null}
            isActive={false}
            selectTab={[Function]}
            value={0}
          >
            Test
          </Unknown>,
          <Unknown
            activeIcon={null}
            defaultActive={true}
            isActive={true}
            selectTab={[Function]}
            value={1}
          >
            Test2
          </Unknown>,
          <span>
            This is not a tab
          </span>,
        ],
        "className": "tab-group-ul flex",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": ".0",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test",
            "isActive": false,
            "selectTab": [Function],
            "value": 0,
          },
          "ref": null,
          "rendered": "Test",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".1",
          "nodeType": "function",
          "props": Object {
            "activeIcon": null,
            "children": "Test2",
            "defaultActive": true,
            "isActive": true,
            "selectTab": [Function],
            "value": 1,
          },
          "ref": null,
          "rendered": "Test2",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": ".2",
          "nodeType": "host",
          "props": Object {
            "children": "This is not a tab",
          },
          "ref": null,
          "rendered": "This is not a tab",
          "type": "span",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
